external-crates/move/crates/move-compiler/tests/move_check/unit_test/multiple_test_annotations@unit_test.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W10007]: issue with attribute value
  ┌─ tests/move_check/unit_test/multiple_test_annotations.move:5:7
  │
5 │     #[test(_a=@0x1)]
  │       ^^^^^^^^^^^^^
  │       │
  │       Arguments are no longer supported in `#[test]` attributes
  │       Ignoring these arguments

warning[W10007]: issue with attribute value
  ┌─ tests/move_check/unit_test/multiple_test_annotations.move:6:7
  │
6 │     #[test(_b=@0x2)]
  │       ^^^^^^^^^^^^^
  │       │
  │       Arguments are no longer supported in `#[test]` attributes
  │       Ignoring these arguments

error[E10001]: invalid duplicate attribute
  ┌─ tests/move_check/unit_test/multiple_test_annotations.move:6:7
  │
5 │     #[test(_a=@0x1)]
  │       ------------- Attribute previously given here
6 │     #[test(_b=@0x2)]
  │       ^^^^^^^^^^^^^ Duplicate attribute 'test' attached to the same item

warning[W10007]: issue with attribute value
  ┌─ tests/move_check/unit_test/multiple_test_annotations.move:7:5
  │
7 │     public fun a(_a: signer, _b: signer) { }
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid test function
  │
  = Test functions with arguments have been deprecated
  = If you would like to test functions with random inputs, consider using '#[rand_test]' instead

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_test_annotations.move:10:7
   │
10 │     #[test(_a=@0x1, _b=@0x2)]
   │       ^^^^^^^^^^^^^^^^^^^^^^
   │       │
   │       Arguments are no longer supported in `#[test]` attributes
   │       Ignoring these arguments

error[E10001]: invalid duplicate attribute
   ┌─ tests/move_check/unit_test/multiple_test_annotations.move:10:7
   │
 9 │     #[test]
   │       ---- Attribute previously given here
10 │     #[test(_a=@0x1, _b=@0x2)]
   │       ^^^^^^^^^^^^^^^^^^^^^^ Duplicate attribute 'test' attached to the same item

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/multiple_test_annotations.move:11:5
   │
11 │     public fun b(_a: signer, _b: signer) { }
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid test function
   │
   = Test functions with arguments have been deprecated
   = If you would like to test functions with random inputs, consider using '#[rand_test]' instead
